<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RaceCarActivity"
    android:orientation="vertical">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/StartRaceRoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="400dp"
        android:text="@string/gps_race_road_start"
        />

    <Button
        android:id="@+id/StopRaceRoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="400dp"
        android:text="@string/gps_race_road_stop"
        />

    <Button
        android:id="@+id/StartRaceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="400dp"
        android:text="@string/gps_race_start"
      />

    <Button
        android:id="@+id/StopRaceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="400dp"
        android:text="@string/gps_race_stop"
       />

    <Button
        android:id="@+id/ShowRaceRoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="400dp"
        android:text="@string/gps_race_show"
        />



</LinearLayout>
